CKAD-Certified-Kubernetes-Application-Developer/Lightning-Labs/Lab-1/logger-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: logger
  name: logger
spec:
  containers:
  - image: nginx:alpine
    name: logger
    resources: {}
    volumeMounts:
      - mountPath: "/var/www/nginx"
        name: nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: nginx
      persistentVolumeClaim:
        claimName: log-claim
status: {}
