CKAD-Certified-Kubernetes-Application-Developer/Lightning-Labs/Lab-1/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy: {}
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:alpine
        name: redis
        resources:
          requests:
            cpu: "0.2"
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-config
          mountPath: /redis-master
        - name: data
          mountPath: /redis-master-data
      volumes:
        - name: redis-config
          configMap:
            name: redis-config
        - name: data
          emptyDir: {}
status: {}
