CKAD-Certified-Kubernetes-Application-Developer/Lightning-Labs/Lab-1/time-check-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: time-check
  name: time-check
  namespace: dvl1987
spec:
  containers:
  - image: busybox
    name: time-check
    resources: {}
    command: ["/bin/sh"]
    args: ["-c", "while true; do date; sleep $TIME_FREQ;done > /opt/time/time-check.log"]
    volumeMounts:
    - name: time
      mountPath: /opt/time
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: time
    emptyDir: {}
status: {}
